Painful migration to BigDecimal